--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ piston2d-graphics = "0.42.0"
 piston2d-opengl_graphics = "0.81.0"
 piston_window = "0.124.0"
 
-dynchess-lib = { git = "https://github.com/INDA22PlusPlus/imou-chess.git" }
+#dynchess-lib = { git = "https://github.com/INDA22PlusPlus/imou-chess.git" }
+chess_lib_temp_clone = { path = "chess_lib_temp_clone-master" }
