add connection_type to networking, begin adding protobuf

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ piston2d-opengl_graphics = "0.81.0"
 piston_window = "0.124.0"
 
 dynchess-lib = { git = "https://github.com/INDA22PlusPlus/imou-chess.git" }
+
+prost = "0.11.0"
